fix z-index

--- a/src/component/BasePage/index.css
+++ b/src/component/BasePage/index.css
@@ -36,6 +36,7 @@ body {
 
 .ziltag-base-page .ziltag-base-page__avatar-menu {
   position: absolute;
+  z-index: 1;
   right: 16px;
   top: 47px;
 }
